--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -16,7 +16,7 @@
                 {% block sidebar %}
                     <div class="panel panel-primary">
                         <!-- Default panel contents -->
-                        <div class="panel-heading">Create:</div>
+                        <div class="panel-heading">Actions:</div>
                             <table class="table">
                                 <tbody>
                                     <tr>
@@ -30,6 +30,9 @@
                                     </tr>
                                     <tr>
                                         <td class="disabled">Review Results</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="disabled">Review for DevicePass</td>
                                     </tr>
                                 </tbody>
                             </table>
