--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -32,7 +32,7 @@
                                         <td class="disabled">Review Results</td>
                                     </tr>
                                     <tr>
-                                        <td class="disabled">Review for DevicePass</td>
+                                        <td class="disabled">Package for DevicePass</td>
                                     </tr>
                                 </tbody>
                             </table>
