--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -88,7 +88,7 @@
                                         <tr>
                                             <td>
                                                 <a class="btn btn-primary btn-sm" href="#" role="button" onclick="hideShowCss('div_newProject')">Close</a>
-                                                <button class="btn btn-primary btn-sm" type="submit">Save </button>
+                                                <button class="btn btn-primary btn-sm" type="submit" data-toggle="progress" data-trigger="click">Create</button>
                                             </td>
                                         </tr>
                                     </tbody>
