--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -26,7 +26,7 @@
                                         <td>Create Test Cases</td>
                                     </tr>
                                     <tr>
-                                        <td><a href="#">Create Page Objects</a></td>
+                                        <td><a href="/?action_createPageObjects={{name_project}}">Create Page Objects</a></td>
                                     </tr>
                                     <tr>
                                         <td class="disabled">Review Results</td>
