--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -69,7 +69,7 @@
                                         <tr>
                                             <td>
                                                 <div class="alert alert-info" role="alert">1. Please input New Project Name. Note: Only letters allowed.<p>
-                                                    2. Please select a default Test type. Other Test type can be added later.
+                                                    2. Please select a default Test type. Other Test type can be added in script.
                                                 </p>
                                                 </div>
                                                 <div class="input-group">
@@ -83,6 +83,8 @@
                                                 <input type="radio" name="radioButton_testType" id="Android" value="Android" checked> Android
                                                 <input type="radio" name="radioButton_testType" id="Web" value="Web"> Web
                                                 <input type="radio" name="radioButton_testType" id="Ios" value="Ios" class="disabled" disabled="disabled"> Ios
+                                                <input type="radio" name="radioButton_testType" id="WinApp" value="WinApp" class="disabled" disabled="disabled"> WinApp
+                                                <input type="radio" name="radioButton_testType" id="MacApp" value="MacApp" class="disabled" disabled="disabled"> MacApp
                                             </td>
                                         </tr>
                                         <tr>
@@ -99,7 +101,7 @@
                                 <table class="table table-striped" style="border:1px solid #f2dede; height: auto; width: 100%;">
                                     <tbody>
                                         <tr>
-                                           <td><div class="alert alert-info" role="alert">Welcome!</div></td>
+                                            <td><div class="alert alert-info" role="alert"><strong>Welcome!</strong></div></td>
                                         </tr>
                                         <tr>
                                            <td>1. Click <b>Create</b> > <b>Create New Project</b> on Navigate Bar, you can create a new project.</td>
