--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -22,11 +22,14 @@
                                     <tr>
                                         <td onclick="showShowCss('div_newProject');setFocus('input_newProject')"><a href="#">Create New Project</a></td>
                                     </tr>
-                                    <tr class="disabled" title="Create test script without coding. Manual testers can use this to create test script.">
+                                    <tr class="disabled" title="Create test scripts without coding. Manual testers can use this function to create test script.">
                                         <td>Create Test Cases</td>
                                     </tr>
                                     <tr>
                                         <td><a href="/?action_createPageObjects={{name_project}}">Create Page Objects</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="/?action_createTestData={{name_project}}">Create Test Data Objects</a></td>
                                     </tr>
                                     <tr>
                                         <td class="disabled">Review Results</td>
@@ -107,7 +110,7 @@
                                            <td>1. Click <b>Create</b> > <b>Create New Project</b> on Navigate Bar, you can create a new project.</td>
                                         </tr>
                                         <tr>
-                                           <td>2. Click <b>Project Name</b> dropdown on Navigate Bar, you can switch an other project.</td>
+                                           <td>2. Click <b>Project Name</b> dropdown on Navigate Bar, you can switch to other project and make it as default.</td>
                                         </tr>
                                     </tbody>
                                 </table>
