--- a/ui/flask/templates/index.html
+++ b/ui/flask/templates/index.html
@@ -85,7 +85,7 @@
                                             <td>
                                                 <input type="radio" name="radioButton_testType" id="Android" value="Android" checked> Android
                                                 <input type="radio" name="radioButton_testType" id="Web" value="Web"> Web
-                                                <input type="radio" name="radioButton_testType" id="Ios" value="Ios" class="disabled" disabled="disabled"> Ios
+                                                <input type="radio" name="radioButton_testType" id="Ios" value="Ios"> Ios
                                                 <input type="radio" name="radioButton_testType" id="WinApp" value="WinApp" class="disabled" disabled="disabled"> WinApp
                                                 <input type="radio" name="radioButton_testType" id="MacApp" value="MacApp" class="disabled" disabled="disabled"> MacApp
                                             </td>
