--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -58,27 +58,36 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <table id='example' class="table">
+                                <table id='example' class="table table-striped">
                                     <tbody>
-                                  <tr>
-                                    <td>1</a></td><td>232323232323</a></td>
-                                  </tr>
-                                  <tr>
-                                    <td>2<td>HTML5获取地理位置定位信息</td>
-                                    <td><a href="#" class="up">上移</a> <a href="#" class="down">下移</a> <a href="#" class="top">置顶</a></td>
-                                  </tr>
-                                  <tr>
-                                      <td>3</td>
-                                    <td>CSS+Cookie实现的固定页脚广告条置顶</a></td>
-                                      <td><a href="#" class="up">上移</a> <a href="#" class="down">下移</a> <a href="#" class="top">置顶</a></td>
-                                  </tr>
-                                  <tr>
-                                      <td>4</td>
-                                    <td>dfsfsdfs</a></td>
-                                  </tr>
+                                      <tr>
+                                         <td>1</td><td>111111</td>
+                                          <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
+                                      <tr>
+                                         <td>2</td><td>222222</td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
+                                      <tr>
+                                         <td>3</td><td>333333</td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
+                                      <tr>
+                                         <td>4</td><td>444444</td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
+                                      <tr>
+                                         <td>5</td><td>555555</td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
+                                      <tr>
+                                         <td>6</td><td>666666</td>
+                                         <td><a href="#" class="glyphicon glyphicon-remove"/></td>
+                                      </tr>
                                     </tbody>
                                 </table>
-                                <input type='button' id='sort' value='排序' />
+                                <input type='button' id='sort1' value='排序' />
                             </div>
                         </div>
                     </div>
