--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -38,40 +38,64 @@
         <!--{% endif %}-->
         <!--{% endblock %}-->
         <!--</div>-->
+        <div class="modal fade" id="addLocatorModal" tabindex="-1" role="dialog"
+             aria-labelledby="addLocatorModalLabel" aria-hidden="true">
+            <div class="modal-dialog" style="width: 800px">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">haha</button>
+                        <p></p><p></p>
+                        <h4 class="modal-title" id="addLocatorModalLabel">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdown_locatorName"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    Add locator(s)
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdown_locatorName">
+                                    {% for locator_type in _UiPortal.getLocators() %}
+                                    <li class="list-group-item">
+                                        <a onclick="aaa('{{locator_type}}')">{{locator_type}}</a>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <table id='aaa' class="table table-striped" style="border:1px solid #f2dede; height: auto;">
+                            <tr>
+                                <td style="width:50px;">1.</td>
+                                <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>
+                                    to appear in <a
+                                            style=";">3sdfdssssssssssssssssssssssssssssssssssssssssssssssssssss0</a>s.
+                                </td>
+                                <td style="width:80px;">
+                                    <a href="#" class="glyphicon glyphicon-remove"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width:50px;">2.</td>
+                                <td>Click <a style=";">button_example</a>.</td>
+                                <td style="width:80px;">
+                                    <a href="#" class="glyphicon glyphicon-remove"/>
+                                </td>
+                            </tr>
+
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Close
+                        </button>
+                        <button type="button" class="btn btn-primary">
+                            Save
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="col-md-12 main">
-            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                开始演示模态框
-            </button>
-            <!-- 模态框（Modal） -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-                 aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal"
-                                    aria-hidden="true">×
-                            </button>
-                            <h4 class="modal-title" id="myModalLabel">
-                                模态框（Modal）标题
-                            </h4>
-                        </div>
-                        <div class="modal-body">
-                            点击关闭按钮检查事件功能。
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default"
-                                    data-dismiss="modal">
-                                关闭
-                            </button>
-                            <button type="button" class="btn btn-primary">
-                                提交更改
-                            </button>
-                        </div>
-                    </div><!-- /.modal-content -->
-                </div><!-- /.modal-dialog -->
-            </div><!-- /.modal -->
-
-
             {% block right_content %}
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -86,8 +110,9 @@
                             <tbody>
                             <tr>
                                 <td style="width:50px;">1.</td>
-                                <td>Wait for <a style=";" data-toggle="modal" data-target="#myModal">button_example</a> to appear in <a
-                                        style=";">30</a>s.
+                                <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>
+                                    to appear in <a
+                                            style=";">30</a>s.
                                 </td>
                                 <td style="width:80px;">
                                     <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
@@ -114,35 +139,35 @@
     </div>
 </div>
 <!--<div class="col-md-12 main">-->
-            <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">-->
-                <!--开始演示模态框-->
-            <!--</button>-->
-            <!--&lt;!&ndash; 模态框（Modal） &ndash;&gt;-->
-            <!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog"-->
-                 <!--aria-labelledby="myModalLabel" aria-hidden="true">-->
-                <!--<div class="modal-dialog">-->
-                    <!--<div class="modal-content">-->
-                        <!--<div class="modal-header">-->
-                            <!--<button type="button" class="close" data-dismiss="modal"-->
-                                    <!--aria-hidden="true">×-->
-                            <!--</button>-->
-                            <!--<h4 class="modal-title" id="myModalLabel">-->
-                                <!--模态框（Modal）标题-->
-                            <!--</h4>-->
-                        <!--</div>-->
-                        <!--<div class="modal-body">-->
-                            <!--点击关闭按钮检查事件功能。-->
-                        <!--</div>-->
-                        <!--<div class="modal-footer">-->
-                            <!--<button type="button" class="btn btn-default"-->
-                                    <!--data-dismiss="modal">-->
-                                <!--关闭-->
-                            <!--</button>-->
-                            <!--<button type="button" class="btn btn-primary">-->
-                                <!--提交更改-->
-                            <!--</button>-->
-                        <!--</div>-->
-                    <!--</div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
-                <!--</div>&lt;!&ndash; /.modal-dialog &ndash;&gt;-->
-            <!--</div>&lt;!&ndash; /.modal &ndash;&gt;-->
+<!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addLocatorModal">-->
+<!--开始演示模态框-->
+<!--</button>-->
+<!--&lt;!&ndash; 模态框（Modal） &ndash;&gt;-->
+<!--<div class="modal fade" id="addLocatorModal" tabindex="-1" role="dialog"-->
+<!--aria-labelledby="addLocatorModalLabel" aria-hidden="true">-->
+<!--<div class="modal-dialog">-->
+<!--<div class="modal-content">-->
+<!--<div class="modal-header">-->
+<!--<button type="button" class="close" data-dismiss="modal"-->
+<!--aria-hidden="true">×-->
+<!--</button>-->
+<!--<h4 class="modal-title" id="addLocatorModalLabel">-->
+<!--模态框（Modal）标题-->
+<!--</h4>-->
+<!--</div>-->
+<!--<div class="modal-body">-->
+<!--点击关闭按钮检查事件功能。-->
+<!--</div>-->
+<!--<div class="modal-footer">-->
+<!--<button type="button" class="btn btn-default"-->
+<!--data-dismiss="modal">-->
+<!--关闭-->
+<!--</button>-->
+<!--<button type="button" class="btn btn-primary">-->
+<!--提交更改-->
+<!--</button>-->
+<!--</div>-->
+<!--</div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
+<!--</div>&lt;!&ndash; /.modal-dialog &ndash;&gt;-->
+<!--</div>&lt;!&ndash; /.modal &ndash;&gt;-->
 {% endblock %}
