--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -63,7 +63,7 @@
                         </h4>
                     </div>
                     <div class="modal-body">
-                        <table id='table_locators' class="table table-striped" style="border:1px solid #f2dede; height: auto;">
+                        <table id='table_locators' class="table table-striped  table-hover table-condensed" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
                             </tbody>
                         </table>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="col-sm-9 col-md-9" style="overflow: auto; height: auto;">
-                        <table id='table_cases' class="table table-striped" style="border:1px solid #f2dede; height: auto;">
+                        <table id='table_cases' class="table table-striped  table-hover table-condensed" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
                             <tr>
                                 <td style="width:50px;">1.</td>
