--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -55,7 +55,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="dropdown_locatorName">
                                     {% for locator_type in _UiPortal.getLocators() %}
                                     <li class="list-group-item">
-                                        <a onclick="appendLocatorRow('{{locator_type}}', 'table_locators')">{{locator_type}}</a>
+                                        <a onclick="appendLocatorRow('{{locator_type}}', 'table_locators');">{{locator_type}}</a>
                                     </li>
                                     {% endfor %}
                                 </ul>
