--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" >
         <link rel="stylesheet" href="/static/css/custom.css" >
+        <link rel="stylesheet" href="/static/css/jquery-confirm.min.css" >
         <script src="/static/js/Chart.min.js">
 
         </script>
@@ -166,6 +167,7 @@ jQuery(function($){
   <script src="/static/js/configure.js"></script>
   <script src="/static/js/custom.js"></script>
   <script src="/static/js/main.js"></script>
+  <script src="/static/js/jquery-confirm.min.js"></script>
 {% endblock %}
 {% block localjs %}
 {% endblock %}
