--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -53,7 +53,7 @@
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdown_locatorName">
-                                    {% for locator_type in _UiPortal.getLocators() %}
+                                    {% for locator_type in _UiPortal.get_locators() %}
                                     <li class="list-group-item">
                                         <a onclick="appendLocatorRow('{{locator_type}}', 'table_locators');">{{locator_type}}</a>
                                     </li>
@@ -91,23 +91,23 @@
                     <div class="col-sm-9 col-md-9" style="overflow: auto; height: auto;">
                         <table id='table_cases' class="table table-striped  table-hover table-condensed table-bordered" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
-                            <tr>
-                                <td style="width:50px;">1.</td>
-                                <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>to appear in <a style=";">30</a>s.
-                                </td>
-                                <td style="width:80px;">
-                                    <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
-                                    <a href="#" class="glyphicon glyphicon-remove"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="width:50px;">2.</td>
-                                <td>Click <a style=";">button_example</a>.</td>
-                                <td style="width:80px;">
-                                    <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
-                                    <a href="#" class="glyphicon glyphicon-remove"/>
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td style="width:50px;">1</td>
+                                    <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a> to appear in <a style=";">30</a>s.
+                                    </td>
+                                    <td style="width:80px;">
+                                        <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
+                                        <a href="#" class="glyphicon glyphicon-remove"/>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="width:50px;">2</td>
+                                    <td>Click <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>.</td>
+                                    <td style="width:80px;">
+                                        <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
+                                        <a href="#" class="glyphicon glyphicon-remove"/>
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                         <a href="#" class="glyphicon glyphicon-plus"></a>
