--- a/ui/flask/templates/base.html
+++ b/ui/flask/templates/base.html
@@ -43,7 +43,8 @@
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Create<span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
                           <li onclick="showShowCss('div_newProject');setFocus('input_newProject')"><a href="#">Create New Project</a></li>
-                          <li class="disabled"><a href="#">Create Test Cases</a></li>
+                          <li><a href="/?action_createTestCases">Create Test Cases</a></li>
+                          <!--<li class="disabled"><a href="#">Create Test Cases</a></li>-->
                           <li><a href="/?action_createPageObjects={{name_project}}">Create Page Objects</a></li>
                       </ul>
                   </li>
@@ -165,6 +166,7 @@ jQuery(function($){
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/configure.js"></script>
   <script src="/static/js/custom.js"></script>
+  <script src="/static/js/action.js"></script>
   <script src="/static/js/main.js"></script>
   <script src="/static/js/jquery-confirm.min.js"></script>
 {% endblock %}
