--- a/ui/flask/templates/case.html
+++ b/ui/flask/templates/case.html
@@ -44,7 +44,8 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                        <p></p><p></p>
+                        <p></p>
+                        <p></p>
                         <h4 class="modal-title" id="addLocatorModalLabel">
                             <div class="dropdown">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdown_locatorName"
@@ -81,6 +82,44 @@
         </div>
         <div class="col-md-12 main">
             {% block right_content %}
+            <table class="table table-striped  table-hover table-condensed table-bordered">
+                <tr>
+                    <td style="width:200px;">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width:200px;">
+                                Dropdown
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="NewPageName"><b>New Project Name:</b></span>
+                            <input type="text" name="edit_newProject" id="edit_newProject" class="form-control" placeholder="For example: Page_home" aria-describedby="NewPageName"
+                                   onkeyup="this.value=this.value.replace(/[^a-zA-Z]/g,'')">
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+
+            <ul class="nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><u>{{_InitFwk.name_project}}</u><span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        {% for name_project in _InitFwk.list_all_projects %}
+                        <li class="list-group-item"><a href="/?action_selectProject={{name_project}}">{{name_project}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            </ul>
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
@@ -91,23 +130,23 @@
                     <div class="col-sm-9 col-md-9" style="overflow: auto; height: auto;">
                         <table id='table_cases' class="table table-striped  table-hover table-condensed table-bordered" style="border:1px solid #f2dede; height: auto;">
                             <tbody>
-                                <tr>
-                                    <td style="width:50px;">1</td>
-                                    <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a> to appear in <a style=";">30</a>s.
-                                    </td>
-                                    <td style="width:80px;">
-                                        <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
-                                        <a href="#" class="glyphicon glyphicon-remove"/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td style="width:50px;">2</td>
-                                    <td>Click <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>.</td>
-                                    <td style="width:80px;">
-                                        <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
-                                        <a href="#" class="glyphicon glyphicon-remove"/>
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td style="width:50px;">1</td>
+                                <td>Wait for <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a> to appear in <a style=";">30</a>s.
+                                </td>
+                                <td style="width:80px;">
+                                    <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
+                                    <a href="#" class="glyphicon glyphicon-remove"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width:50px;">2</td>
+                                <td>Click <a style=";" data-toggle="modal" data-target="#addLocatorModal">button_example</a>.</td>
+                                <td style="width:80px;">
+                                    <a href="#" class="glyphicon glyphicon-plus"></a>&nbsp;
+                                    <a href="#" class="glyphicon glyphicon-remove"/>
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                         <a href="#" class="glyphicon glyphicon-plus"></a>
